build: add sbt-assembly configuration for standalone JAR
Configure sbt-assembly to build a standalone executable JAR for CounterApp
that bypasses sbt's terminal limitations. JLine3 cannot create a system
terminal when run through sbt, falling back to "dumb terminal" which
doesn't support raw mode keyboard input.

Changes:
- Add sbt-assembly plugin (2.3.1)
- Configure assembly merge strategy for META-INF and module-info conflicts
- Set mainClass to CounterApp for executable JAR
- Comment out fork/connectInput (didn't solve terminal access issue)
- Update README with two run options: standalone JAR (recommended) vs sbt

The standalone JAR approach enables immediate keypress response without
requiring Enter, providing full interactive TUI experience.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>